--- a/renovate.json
+++ b/renovate.json
@@ -5,4 +5,9 @@
   "kubernetes": {
     "fileMatch": ["(^|/)[^/]*\\.yaml$"]
   }
+  "docker-compose": {
+    "digest": {
+      "enabled": true
+    }
+  }
 }
