--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,7 @@ services:
     image: nginx:latest@sha256:2500df07b831096e9207522576c20132b3f645865185d519f3f911602b585c4b
     container_name: nginx
     restart: unless-stopped
+  nginx:
+    image: alpine:3.10
+    container_name: alpine
+    restart: unless-stopped
