--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -1,3 +1,8 @@
+environments:
+  default:
+    values:
+      - version: 11.2.3
+
 repositories:
 - name: stable
   url: https://kubernetes-charts.storage.googleapis.com
@@ -6,4 +11,4 @@ releases:
 - name: prometheus
   namespace: prometheus
   chart: stable/prometheus
-  version: 11.2.3
+  version: {{ .Values.version }}
