--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -30,5 +30,5 @@ releases:
   chart: k8s-at-home/jellyfin
   values:
     - image:
-        repository: linuxserver/jellyfin
-        tag: version-10.6.3
+        repository: lukasmrtvy/tools
+        tag: latest@sha256:732d70b72f93b06fb202bd5c464d7b0e2c5c3fc6559456622af1535d64e79ea7
