--- a/renovate.json
+++ b/renovate.json
@@ -17,7 +17,7 @@
     }
   },
   "helm-values": {
-    "fileMatch": ["(^|/)values.yaml$"],
+    "fileMatch": ["(^|/)helmfile.yaml$"],
     "enabled": true
   }
 }
