--- a/ansible/tasks/test.yaml
+++ b/ansible/tasks/test.yaml
@@ -1,9 +1,8 @@
 ---
 - hosts: webservers
-  serial: 5
 
   tasks:
   - name: Create a data container
-    community.docker.docker_container:
+    docker_container:
         name: test
         image: alpine:3.11
