--- a/ansible/tasks/test.yaml
+++ b/ansible/tasks/test.yaml
@@ -2,7 +2,12 @@
 - hosts: webservers
 
   tasks:
-  - name: Create a data container
+  - name: Create a data container - 1
     docker_container:
-        name: test
+        name: test1
         image: alpine:3.11
+        
+  - name: Create a data container - 2
+    community.docker.docker_container:
+      name: test2
+      image: busybox:1.32.0
