--- a/ansible/tasks/test.yaml
+++ b/ansible/tasks/test.yaml
@@ -13,6 +13,6 @@
       image: busybox:1.32.0
 
   - name: Create a data container - 3
-    community.docker.docker_container:
+    docker_container:
       name: test3
-      image: alpine:3.10
+      image: busybox:1.32.0
